@@ -51,13 +51,13 @@ import javax.ws.rs.core.MultivaluedMap;
 /**
  * An implementation of {@link MultivaluedMap} where keys and values are
  * instances of String.
- * 
+ *
  * @author Paul.Sandoz@Sun.Com
  */
-public class MultivaluedMapImpl 
-        extends HashMap<String, List<String>> 
+public class MultivaluedMapImpl
+        extends HashMap<String, List<String>>
         implements MultivaluedMap<String, String> {
-    
+
     static final long serialVersionUID = -6052320403766368902L;
 
     public MultivaluedMapImpl() { }
@@ -69,28 +69,28 @@ public class MultivaluedMapImpl
     }
 
     // MultivaluedMap
-    
+
     @Override
     public final void putSingle(String key, String value) {
         List<String> l = getList(key);
-                
+
         l.clear();
         if (value != null)
             l.add(value);
-        else 
+        else
             l.add("");
     }
-    
+
     @Override
     public final void add(String key, String value) {
         List<String> l = getList(key);
-        
+
         if (value != null)
             l.add(value);
-        else 
+        else
             l.add("");
     }
-    
+
     @Override
     public final String getFirst(String key) {
         List<String> values = get(key);
@@ -99,18 +99,18 @@ public class MultivaluedMapImpl
         else
             return null;
     }
-    
-    // 
-    
+
+    //
+
     public final void addFirst(String key, String value) {
         List<String> l = getList(key);
-        
+
         if (value != null)
             l.add(0, value);
-        else 
+        else
             l.add(0, "");
     }
-    
+
     public final <A> List<A> get(String key, Class<A> type) {
         Constructor<A> c = null;
         try {
@@ -118,7 +118,7 @@ public class MultivaluedMapImpl
         } catch (Exception ex) {
             throw new IllegalArgumentException(type.getName()+" has no String constructor", ex);
         }
-        
+
         ArrayList<A> l = null;
         List<String> values = get(key);
         if (values != null) {
@@ -136,20 +136,20 @@ public class MultivaluedMapImpl
 
     public final void putSingle(String key, Object value) {
         List<String> l = getList(key);
-                
+
         l.clear();
         if (value != null)
             l.add(value.toString());
-        else 
+        else
             l.add("");
     }
-    
+
     public final void add(String key, Object value) {
         List<String> l = getList(key);
-        
+
         if (value != null)
             l.add(value.toString());
-        else 
+        else
             l.add("");
     }
 
@@ -161,7 +161,7 @@ public class MultivaluedMapImpl
         }
         return l;
     }
-    
+
     public final <A> A getFirst(String key, Class<A> type) {
         String value = getFirst(key);
         if (value == null)
@@ -179,15 +179,15 @@ public class MultivaluedMapImpl
         }
         return retVal;
     }
-    
+
     @SuppressWarnings("unchecked")
     public final <A> A getFirst(String key, A defaultValue) {
         String value = getFirst(key);
         if (value == null)
             return defaultValue;
-        
+
         Class<A> type = (Class<A>)defaultValue.getClass();
-        
+
         Constructor<A> c = null;
         try {
             c = type.getConstructor(String.class);
